index.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box; 
}
body{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100%;
    background-color: whitesmoke;
}
.container{
    background-color: palevioletred;
    border: 2px solid white;
    padding: 20px;
    border-radius: 15px;
    box-shadow: 0px 3px 15px black;  
}
input{
    padding: 22px;
    border: 2px solid salmon;
    box-shadow: 1px 1px 1px rgb(217, 82, 82);
    cursor: pointer;
    font-size: larger;
    border-radius: 10px;
}
button{
    height: 60px;
    width: 60px;
    border-radius: 10px;
    margin: 10px;
    font-size: larger;
    cursor: pointer; 
}
button:hover{
    transform: scale(1.02);
    transition: all 0.3s ease-in-out;
}

@media (max-width:600px){
    *{
        margin: 0;
        padding: 0;
        font-size: 14px;
    }
    button{
        height: 45px;
        width: 45px;
        
    }
    .container{
        padding: 15px;
    }
}

